# advice.service

./: .gitignore  BLOCKERS.md  CLAUDE_CODE_HANDOFF.md  Competitors.md  README.md  advice-roadmap.md  architecture.html  charter-consultancy-hero.html  charter-consultancy-landing.html  charter-consultancy-roadmap.md  charter-law-ad-library.md  charter-law-fork-agent-super-prompt.md  charter-law-growth-and-channels.md  charter-law-operating-playbook.md  charter-law-roadmap.md  charter-law-setup-hub.md  charter-law-super-prompt.md  charter-law-tech-stack.md  charter-law-video-scripts.md  codex-review-02.md  codex-review-03.md  compound-engineering-research.md  general-legal-dossier.md  vercel.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260701_0001_create_matter_tables.py  20260701_0002_create_matter_files.py  20260701_0003_add_upload_and_payment_state.py  20260701_0004_create_public_intakes.py  20260701_0005_create_matter_ai_preps.py  20260701_0006_create_playbooks.py  20260701_0007_add_contract_type_to_matters.py  20260701_0008_create_matter_ai_feedback.py  (+6 more)
backend/app/: __init__.py  config.py  main.py  observability.py
backend/tests/: conftest.py  test_ai_prep_service.py  test_attorney_router.py  test_auth.py  test_board_service.py  test_checkout_service.py  test_config.py  test_document_checker.py  test_health.py  test_lifecycle.py  test_matter_service.py  test_observability.py  test_playbook_router.py  test_playbook_service.py  test_public_intake.py  test_retention.py
(+93 files in other folders)
